
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MODx 0.9.5 RC2 (rev 1911 - Nov 3, 2006)
====================================
* Added note regarding regiseter_globals setting to README (1911)
* Fix for imporant potential security issue for servers with register_globals set to ON -- makes File Browser only usable with manager sessions (1907)
* [FS#646] Fix issue with non-auto-refreshing tree and other warnings resulting from removing webelm.js by adding prototype to header.inc.php (1905)
* Enable spellcheck for Firefox 2 on content editing pages and add opera to READM file as a "good manager client" (1904)
* [FS#638] Allow textareas that might contain code to be styled differently than others (1903)
* Added back fourth parameter to sendRedirect() function; this responseCode parameter can be used to pass in a valid HTTP redirect code to be set with a header() call (i.e. 'HTTP/1.1 301 Permanently moved'). (1902)
* Remove a reference to legacy coolbuttons and fix header buttons on system event log (1901)
* Removed modx.js (webelm.js) and cb2.js scripts from header due to conflicts with other scripts. (1893)
* Stripped all CoolButton code and modified all buttons as CSS buttons. (1893)
* Added modified actionButtons class to CSS in each theme. (1893)
* Modified setParent function so that it does not use DynElement scripts. (1893)
* Fix eForm parsing error with spaces and multiple sessionVars and broken Thank You page (1890)
* Update Wayfinder to record references better: e.g., 6 to [~6~] (1885)
* Fix incorrect 1px top border on MODx Host menu (1797/1887)
* Update to Jot 1.0 release (1884)
* [FS#632] remove reference to "folder" in main english.inc.php (1870)
* Language file update to QuickEdit. (1865)