@@ -3,8 +3,14 @@ This file shows the changes in recent releases of MODx. The most current release
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
 
-MODx 0.9.5 RC2 (rev 1911 - Nov 3, 2006)
+MODx 0.9.5 RC2 (rev 1919 - Nov 5, 2006)
 ====================================
+* Increased character length of menu title and alias field 255 max (1919)
+* Modified context menu to use prototype vs. WebFX (1918)
+* Increased character length of page title field to 255 max (1917)
+* Move action button trigger to onclick for better IE7 compatibility (1916)
+* [FS#650] fixed corrupting widget properties frombad javascript loop (1914)
+* Replaced sortable table items in manager to remove WebFX dependency (1913)
 * Added note regarding regiseter_globals setting to README (1911)
 * Fix for imporant potential security issue for servers with register_globals set to ON -- makes File Browser only usable with manager sessions (1907)
 * [FS#646] Fix issue with non-auto-refreshing tree and other warnings resulting from removing webelm.js by adding prototype to header.inc.php (1905)
